page spacing issue

--- a/css/inner/dashboard.less
+++ b/css/inner/dashboard.less
@@ -6,6 +6,7 @@
 
 #dashboard {
   min-width: 960px;
+  padding: 0 3em;
   margin: 0 auto;
   a {
     color: @result-grayDark;
@@ -347,7 +348,7 @@
 }
 .dash-wrap {
   margin-left: 300px;
-  padding-left: 1em;
+  padding-left: 2em;
 }
 .status-circle {
   a:hover {
